--- a/index.html
+++ b/index.html
@@ -70,25 +70,25 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img src="images/img1.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
+            <div class="carousel-caption  d-md-block">
               <h1>The Roots of Education are Bitter, But the Fruit is Sweet</h1>
-              <p>There is always an way to shine.</p>
+              <!-- <p>There is always an way to shine.</p> -->
               <button type="button" class="btn btn-primary btn-sm">Start Learning Now !</button>
             </div>
           </div>
           <div class="carousel-item">
             <img src="images/img2.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
+            <div class="carousel-caption  d-md-block">
               <h1>The Great Aim of Education is not Knowledge, But Action</h1>
-              <p>World is full of opportunity and it is waiting for you.</p>
+              <!-- <p>World is full of opportunity and it is waiting for you.</p> -->
               <button type="button" class="btn btn-primary btn-sm">Start Learning Now !</button>
             </div>
           </div>
           <div class="carousel-item">
             <img src="images/img3.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
+            <div class="carousel-caption  d-md-block">
               <h1>We Help You to Learn New Things</h1>
-              <p>Don't worry we are here for you.</p>
+              <!-- <p>Don't worry we are here for you.</p> -->
               <button type="button" class="btn btn-primary btn-sm">Start Learning Now !</button>
             </div>
           </div>
