--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         
         <div class="container-fluid">
-          <a class="navbar-brand mb-0 h1" href="#">Vidyalay Classes</a>
+          <a class="navbar-brand mb-0 h1" href="#">VIDYALAY CLASSES</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
